--- a/client/src/layouts/System/SystemLayout.module.scss
+++ b/client/src/layouts/System/SystemLayout.module.scss
@@ -23,7 +23,8 @@
     transition: margin 0.2s linear;
     width: 100%;
     padding: 2.375rem 1rem 2.375rem 2.75rem;
-    margin-top: 3rem;
+    /* Ensure content is pushed below the fixed header (header height = 5rem) */
+    margin-top: 6rem;
   }
 }
 
@@ -34,5 +35,7 @@
 
   .content {
     padding: 0.1rem !important;
+    /* Keep space for fixed header on mobile as well */
+    margin-top: 5.5rem;
   }
 }
